# bepinex-tools

./: .gitignore  Cargo.toml
bepinex_helpers/: Cargo.toml  README.md
bepinex_helpers/src/: error.rs  game.rs
bepinex_installer/: Cargo.toml  README.md
bepinex_installer/src/: bepinex.rs  installer.rs  main.rs
bepinex_installer/src/error/: mod.rs
bepinex_sources/: Cargo.toml  README.md
bepinex_sources/examples/: basic.rs  be.rs
bepinex_sources/src/: bepinex.rs  builds.rs  github.rs  lib.rs  macros.rs  version.rs
bepinex_sources/src/models/: mod.rs
bepinex_sources/src/models/bleeding_edge/: builds.rs  mod.rs
bepinex_sources/src/models/github/: releases.rs
