[package]
name = "bepinex-installer"
version = "0.2.0"
edition = "2021"

# [profile.release]
# strip = true
# lto = true
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bepinex_helpers = { path = "../bepinex_helpers" }
bepinex_sources = { path = "../bepinex_sources" }
eframe = "0.19.0"
egui_extras = "0.19.0"
semver = { workspace = true }
lazy_static = { workspace = true }
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
egui-toast = "0.4.0"
